refactor: add grouping spots and search location from input